# diego

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_de.md  README_es.md  README_fr.md  README_ja.md  README_zh.md  README_zh_TW.md  ROADMAP.md  SECURITY.md  cobertura.xml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: BENCHMARKS.md  DESIGN-safe-mode.md  TESTING.md  THREAT_MODEL.md  report.schema.json  sample-findings.json  sample-report.html
examples/: sample_report.rs  scan.py
src/: config.rs  error.rs  lib.rs  main.rs  python.rs
src/ai/: chat.rs  claude.rs  mod.rs  prompts.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/modules/: mod.rs
src/modules/kerberos/: asreq.rs  crypto.rs  hashcat.rs  mod.rs  tgsreq.rs
src/modules/ldap/: analyze.rs  filters.rs  mod.rs  parser.rs  queries.rs  severity.rs
src/modules/passive/: cleartext.rs  llmnr.rs  mod.rs
src/report/: diff.rs  html.rs  json.rs  markdown.rs  mod.rs  sample.rs
src/utils/: mod.rs  opsec.rs  timestamp.rs
tasks/: lessons.md  todo.md
tests/: baseline_diff_tests.rs  detection_tests.rs  golden_test.rs  ldap_integration_tests.rs  mock_kdc.rs  schema_test.rs
tests/golden/: sample-report.json
