[package]
name = "diego"
version = "0.1.0"
edition = "2024"
description = "Pure Rust Active Directory security diagnostic agent. AS-REP Roasting, Kerberoasting, LDAP enumeration, OPSEC-friendly with Claude API analysis and MCP server mode."
license = "MIT"
authors = ["kent-tokyo <kent-tokyo@users.noreply.github.com>"]
repository = "https://github.com/kent-tokyo/diego"
homepage = "https://github.com/kent-tokyo/diego"
documentation = "https://github.com/kent-tokyo/diego#readme"
readme = "README.md"
keywords = ["kerberos", "active-directory", "pentesting", "ldap", "asrep-roasting"]
categories = ["command-line-utilities", "network-programming", "authentication"]

[lib]
name = "diego"
path = "src/lib.rs"

[[bin]]
name = "diego"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "fs"] }

# Kerberos / ASN.1
rasn = "0.20"
rasn-kerberos = "0.20"

# LDAP
ldap3 = "0.11"

# Packet capture
pnet = "0.34"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async trait objects
async-trait = "0.1"

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# AI / MCP
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio-stream = "0.1"

# Kerberos crypto (RC4-HMAC, NTLM hash)
md-5 = "0.10"
md4 = "0.10"
hmac = "0.12"
digest = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_System_Threading",
], optional = true }

[features]
default = []
windows-native = ["dep:windows-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
