[package]
name = "diego"
version = "0.2.0"
edition = "2024"
description = "Pure Rust Active Directory security diagnostic agent. AS-REP Roasting, Kerberoasting, LDAP enumeration, OPSEC-friendly with Claude API analysis and MCP server mode."
license = "MIT"
authors = ["kent-tokyo <kent-tokyo@users.noreply.github.com>"]
repository = "https://github.com/kent-tokyo/diego"
homepage = "https://github.com/kent-tokyo/diego"
documentation = "https://github.com/kent-tokyo/diego#readme"
readme = "README.md"
keywords = ["kerberos", "active-directory", "pentesting", "ldap", "asrep-roasting"]
categories = ["command-line-utilities", "network-programming", "authentication"]

[lib]
name = "diego"
path = "src/lib.rs"

[[bin]]
name = "diego"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "fs"] }

# Kerberos / ASN.1
rasn = "0.20"
rasn-kerberos = "0.20"

# LDAP
# default-features off drops native-tls (→ openssl-sys on Linux/musl); tls-rustls
# keeps a pure-Rust (ring) TLS backend. Only the async API is used, so "sync" is
# not needed (tls-rustls already pulls tokio/rt).
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls", "tls-rustls-aws-lc-rs"] }

# Packet capture
pnet = "0.34"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Async trait objects
async-trait = "0.1"

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# AI / MCP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tokio-stream = "0.1"

# Kerberos crypto (RC4-HMAC, NTLM hash)
md-5 = "0.10"
md4 = "0.10"
hmac = "0.12"
digest = "0.10"

# Security: credential zeroization
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"  # Constant-time comparison

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_System_Threading",
], optional = true }

[dev-dependencies]
# Validate the JSON report against docs/report.schema.json. default-features off
# drops the optional HTTP/file remote-ref resolvers (and their dep surface) —
# the schema is self-contained.
jsonschema = { version = "0.46", default-features = false }

[features]
default = []
windows-native = ["dep:windows-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
