[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "diego"
requires-python = ">=3.9"
description = "Active Directory security diagnostics — Python bindings for diego"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
]

[tool.maturin]
features = ["python"]
module-name = "diego"
